# cpp-py

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/app/: CMakeLists.txt  main.cxx
cpp/lib/: CMakeLists.txt
cpp/lib/include/: algos.h
cpp/lib/include/CppLib/: point.h  source.h  triangle.h  types.h
cpp/lib/src/: algos.cxx  point.cxx  triangle.cxx
cpp/src/: CMakeLists.txt  algos.cxx
cpp/src/include/: algos.h  types.h
py/: .gitignore  CMakeLists.txt  README.md  README.md.OLD  install.sh  package.json  pyproject.toml  setup.py
py/examples/: test.py
py/src/: binder.cxx
