[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyalgo"
version = "0.1.0"
authors = [
    { name = "Frantz Maerten", email = "fmaerten@gmail.com" },
]
description = "C++ binding in Python using scikit-build-core"

[tool.scikit-build]
cmake.minimum-version = "3.16"
cmake.args = ["-DCMAKE_PREFIX_PATH={pythonLocation}"]

sdist.include = ["../bin/libalgo.dylib", "../bin/pyalgo.so"]

wheel.packages = ["src"]
