[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyalgo"
version = "0.1.0"
authors = [
    { name = "Frantz Maerten", email = "fmaerten@gmail.com" },
]
description = "C++ binding in Python using scikit-build-core"

[tool.scikit-build]
cmake.minimum-version = "3.16"
cmake.args = ["-DCMAKE_PREFIX_PATH={pythonLocation}"]
wheel.packages = ["src"]

#sdist.include = ["../bin/libalgo.dylib", "../bin/pyalgo.so"]

# Define data that should be included in the sdist
[tool.scikit-build.sdist]
include = ["../bin/libalgo.dylib", "../bin/pyalgo.so"]

# Define where to find the pybind11 code
[tool.scikit-build.cmake.define]
PYBIND11_ROOT = "pybind11"
